! Implemented user-created bookmarks and annotations.
! Added rectangle tool: can be used to create an annotation,
  to zoom in, to print selected region or to export it to a bitmap file.
+ Open page and view settings can be restored when opening a file.
+ Page number can be specified when opening files via command line.
+ Back/Forward keys on multimedia keyboards now work as Alt+arrows.
+ Added option to invert colors.
+ Reorganized Settings dialog.
+ Added option to change display units (centimeters, millimeters, inches).
* Improved interface responsiveness when opening and closing documents.
* Improvements for files with large shared dictionaries:
  * Reduced memory usage.
  * Fixed interface stalls.
  * Increased decoding speed.
* Fixed slow loading of large bookmark trees.
* Fixed printing in two pages per sheet mode.
* Fixed a crash in print dialog with some printers.

Changes in version 0.4.3 (2006-09-15):
+ Added panning when mouse wheel is pressed.
* Improved performance of magnifying glass.
* Fixed displaying UTF-8 bookmarks on pre-XP systems.
* Fixed problem with long documents on Win98 when thumbnails are on.
* Fixed font issues.
* Several crash fixes.

Changes in version 0.4.2 (2006-07-24):
! Added magnifying glass tool.
+ Added option to wrap long bookmarks.
+ Added option to hide scrollbars in fullscreen mode.
+ Added option to invert direction of Ctrl+Mouse Wheel zooming.
+ Added option to close the program when Escape is pressed.
+ Added keyboard shortcuts to rotate pages, change layouts and open settings.
* Fixed Open File dialog (.djv files were not displayed).
* Fixed print dialog: collate option is now always available.
* Fixed printing order for custom page ranges.
* Fixed a problem with XP themes.
* Several crash fixes, including a patch from KViewShell DjVu plugin.

Changes in version 0.4.1 (2006-02-25):
! Added support for JPEG-encoded DjVu files.
+ Added an option to select different scaling algorithm